# sldr

./: .gitignore  AGENTS.md  AGENTS_USE.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  justfile  package.json
.github/workflows/: release.yml
.oqto/: app-signals.json
.pi/todos/: cbae842e-1f0f-4a65-9e7a-485c40c34448.json
.trx/: ISSUES.md
.trx/crdt/: trx-3f4w.1.automerge  trx-3f4w.2.automerge  trx-3f4w.3.automerge  trx-3f4w.4.automerge  trx-3f4w.5.automerge  trx-3f4w.6.automerge  trx-3f4w.7.automerge  trx-3f4w.8.automerge  trx-3f4w.9.automerge  trx-3f4w.automerge  trx-8crj.1.automerge  trx-8crj.10.automerge  trx-8crj.11.automerge  trx-8crj.2.automerge  trx-8crj.3.automerge  trx-8crj.4.automerge  trx-8crj.5.automerge  trx-8crj.6.automerge  trx-8crj.7.automerge  trx-8crj.8.automerge  trx-8crj.9.automerge  trx-8crj.automerge  trx-9mwm.automerge  trx-pg1a.1.automerge  trx-pg1a.2.automerge  trx-pg1a.3.automerge  trx-pg1a.4.automerge  trx-pg1a.5.automerge  trx-pg1a.6.automerge  trx-pg1a.7.automerge  trx-pg1a.8.automerge  trx-pg1a.automerge  trx-wr77.automerge
crates/schema-gen/: Cargo.toml
crates/schema-gen/src/: main.rs
crates/sldr-cli/: Cargo.toml
crates/sldr-cli/src/: main.rs  templates.rs
crates/sldr-cli/src/commands/: add.rs  build.rs  config.rs  export.rs  flavor_builder.rs  init.rs  json_output.rs  list.rs  mod.rs  new.rs  open.rs  preview.rs  rm.rs  search.rs  skeleton.rs  slides.rs  watch.rs
crates/sldr-core/: Cargo.toml
crates/sldr-core/src/: config.rs  error.rs  flavor.rs  fuzzy.rs  lib.rs  presentation.rs  slide.rs
crates/sldr-renderer/: Cargo.toml
crates/sldr-renderer/assets/: base.css  flavor-builder.html  presenter.js  test-multi-flavor.html  test-presenter.html  test-single-flavor.html
crates/sldr-renderer/src/: lib.rs  markdown.rs  media.rs  pptx.rs  render.rs  template.rs
crates/sldr-renderer/templates/: center.html  cover.html  default.html  end.html  image-left.html  image-right.html  image.html  intro.html  quote.html  section.html  two-cols-header.html  two-cols.html
crates/sldr-server/: Cargo.toml
crates/sldr-server/src/: lib.rs  main.rs  models.rs  preview.rs  routes.rs  slidev.rs  state.rs
examples/: config.toml  example-flavor.toml  example-skeleton-input.json  example-skeleton.toml  example-slide-input.json
examples/schemas/: README.md  sldr.config.schema.json  sldr.flavor.schema.json  sldr.skeleton-input.schema.json  sldr.skeleton.schema.json  sldr.slide-input.schema.json
examples/templates/: architecture.md  basic.md  bullets.md  chart.md  code-comparison.md  code.md  comparison.md  conclusion.md  cover.md  default.md  discussion.md  end.md  figure.md  image-left.md  image-right.md  image.md  intro.md  methodology.md  qna.md  quote.md  references.md  research-title.md  results.md  section.md  table.md  terminal.md  thank-you.md  title.md  two-cols-header.md  two-cols.md
history/: 2026-01-28-octo-integration-planning.md  fuzzy.md
scripts/: copy_config_schema.sh
skill/: SKILL.md
skill/references/: json-schemas.md
