[workspace]
resolver = "2"
members = [
    "crates/sldr-core",
    "crates/sldr-cli",
    "crates/sldr-server",
    "crates/schema-gen",
]
exclude = [
    "examples",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["byteowlz"]
license = "MIT"
repository = "https://github.com/byteowlz/sldr"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
schemars = { version = "1.2", features = ["derive"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
dialoguer = "0.11"
console = "0.15"

# Fuzzy matching
fuzzy-matcher = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system and paths
dirs = "5.0"
walkdir = "2.5"
shellexpand = "3.1"

# Async (for future slidev integration)
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process + file watching
notify = "8.2"
tempfile = "3"

# Internal crates
sldr-core = { path = "crates/sldr-core" }

# ============================================
# STANDARD PRESET - rust-magic-linter
# ============================================
# The viral tweet config enhanced with async safety
# Recommended for most projects
#
# Based on @notnotstorm's tweet + OpenAgentsInc additions

[workspace.lints.clippy]
# Enable pedantic group for comprehensive checks
pedantic = { level = "warn", priority = -1 }

# === THE GUARDRAILS (Critical for AI Agents) ===
# Panic safety - agents must handle errors, not crash
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"

# The "no cheating" rule
allow_attributes = "deny"

# Code hygiene - no debug leftovers
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

# === ASYNC SAFETY ===
await_holding_lock = "deny"       # Prevents deadlocks

# === PROCESS SAFETY ===
exit = "deny"                     # Libraries shouldn't exit

# === PEDANTIC RELAXATIONS ===
# These are too noisy for most projects
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
